<resources>
    <string name="app_name">LaunchCam</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="get_data">Get Data</string>
    <string name="store_data">Store Data</string>
    <string name="clear_graph">Clear Graph</string>
    <string name="resolution">Resolution</string>
    <string name="frameRate">Frame Rate</string>
    <string name="fov">Field of View</string>

    <string-array name="res_arrays">
        <item>1080</item>
        <item>960</item>
        <item>720</item>
        <item>WVGA</item>
    </string-array>

    <string-array name="graph_array">
        <item>Raw</item>
        <item>Filtered</item>
        <item>Differential</item>
        <item>AGL</item>
        <item>State</item>
    </string-array>

    <string-array name="frameRate_arrays">
        <item>240</item>
        <item>120</item>
        <item>60</item>
        <item>30</item>
    </string-array>

    <string-array name="fov_arrays">
        <item>Wide</item>
        <item>Medium</item>
        <item>Narrow</item>
        <item>Linear</item>
    </string-array>
</resources>
