<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <com.androidplot.xy.XYPlot
        android:id="@+id/aprHistoryPlot"
        androidPlot.backgroundPaint.color="#000000"
        androidPlot.borderPaint.color="#000000"
        androidPlot.domainLabel="Domain"
        androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
        androidPlot.graphWidget.backgroundPaint.color="#000000"
        androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
        androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
        androidPlot.graphWidget.gridBackgroundPaint.color="#000000"
        androidPlot.graphWidget.marginBottom="25dp"
        androidPlot.graphWidget.marginLeft="15dp"
        androidPlot.graphWidget.marginRight="10dp"
        androidPlot.graphWidget.marginTop="20dp"
        androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
        androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
        androidPlot.legendWidget.heightMetric.value="25dp"
        androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
        androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
        androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
        androidPlot.rangeLabel="Range"
        androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
        androidPlot.title="History"
        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
        androidplot.renderMode="use_background_thread"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:layout_marginTop="10px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_getData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_data"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/btn_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_data"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/btn_clearGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_graph"
            android:layout_weight="3"/>
        <Spinner
            android:id="@+id/sp_graphSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_fileList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        />


</LinearLayout>
